fix (#246): increase contrast while allowing a little opacity

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -66,7 +66,7 @@
 }
 
 .navdark .drawer {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.98);
   color: white;
   border-bottom: 1px solid rgba(28, 135, 177, 0.4);
 }
@@ -84,7 +84,7 @@
 }
 
 .navlight .drawer {
-  background: rgba(255, 255, 255, 0.95);
+  background: rgba(255, 255, 255, 0.98);
   color: #000;
   border-bottom: 1px solid rgba(0, 0, 0, 0.7);
 }
